--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "playwright-merge-summary-json-reports",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A package that will make it easy to merge summary.json files output from playwright customer reporter playwright-json-summary-reporter.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "devDependencies": {
     "@types/node": "^14.11.2",
     "gts": "^3.1.1",
     "typescript": "~4.7.0"
   },
   "scripts": {
+    "prepare": "npm run build",
+    "version": "git add -A src",
+    "postversion": "git push && git push --tags",
     "lint": "gts lint",
-    "compile": "tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -25,7 +28,7 @@
     "playwright-reporter",
     "playwrightsolutions"
   ],
-  "author": "Butch Mayhew",
+  "author": "PlaywrightSolutions",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/playwrightsolutions/playwright-merge-summary-json-reports/issues"
