--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build"
+    "outDir": "./lib"
   },
   "include": [
     "src/**/*.ts",
