--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "playwright-merge-summary-json-reports",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A package that will make it easy to merge summary.json files output from playwright customer reporter playwright-json-summary-reporter.",
-  "main": "lib/src/index.js",
+  "main": "lib/src/index",
+  "typings": "src/index",
   "devDependencies": {
     "@types/node": "^14.11.2",
     "gts": "^3.1.1",
